--- a/projects/mt-form-builder/src/lib/components/lib/radio-input/radio-input.component.html
+++ b/projects/mt-form-builder/src/lib/components/lib/radio-input/radio-input.component.html
@@ -11,5 +11,5 @@
     </mat-radio-button>
   </mat-radio-group>
 </form>
-<div class="mgfb-radio-checkbox-error mat-error" *ngIf="config.errorMsg">
+<div class="mgfb-radio-error mat-error" *ngIf="config.errorMsg">
   {{fis.i18nLabel[config.errorMsg] || config.errorMsg}}</div>
